--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 
 
-<script type="text/javascript" src="src/js/main.js"></script>
+<script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
