--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,18 @@
 	<title></title>
 </head>
 <body>
-<div id="app"></div>
+	<header>
+		<img src="/Images/Marvel-logo-copy.png">
+		<div>Superhero Smash</div>
+	</header>
+	<!-- <main>
+		
+	</main> -->
+	<footer>
+		<small>&copy 2016 | Superhero Smash | All Character Rights Are Property of Marvel Entertainment</small>
+	</footer>
 
-
-<script type="text/javascript" src="bundle.js"></script>
+	<div id="app"></div>
+	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
