header styling complete

--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,20 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<title></title>
 </head>
 <body>
 	<header>
-		<img src="/Images/Marvel-logo-copy.png">
-		<div>Superhero Smash</div>
+		<img id="logo" src="/Images/Marvel-logo-copy.png">
+		<h1 id="title">Superhero Slam</h1>
 	</header>
-	<!-- <main>
-		
-	</main> -->
+	<main>
+		<div id="app"></div>
+	</main>
 	<footer>
-		<small>&copy 2016 | Superhero Smash | All Character Rights Are Property of Marvel Entertainment</small>
+		<small>&copy 2016 | Superhero Slam | All Character Rights Are Property of Marvel Entertainment</small>
 	</footer>
-
-	<div id="app"></div>
 	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
