fixed character select view

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<img id="logo" src="/Images/Marvel-logo-copy.png">
 		<h1 id="title">Superhero Slam</h1>
 	</header>
-	<main>
+	<main class="cf">
 		<div id="app"></div>
 	</main>
 	<footer>
